[package]
name = "rogue-time"
version = "0.1.0"
edition = "2024"

[features]
dev = []

[dependencies]
avian3d = { version = "0.2.0", default-features = false, features = [
    "3d",
    "f32",
    "parry-f32",
    "parallel",
    "bevy_scene",
    "default-collider",
    "simd",
    "serialize",
    "collider-from-mesh",
    "bevy_picking",
] }
bevy-tnua = { version = "0.23" }
bevy-tnua-avian3d = { version = "0.5" }
bevy_enhanced_input = "0.11.0"
bevy = { version = "0.16", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_animation",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_input_focus",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "hdr",
    "ktx2",
    "multi_threaded",
    "png",
    "smaa_luts",
    "std",
    "sysinfo_plugin",
    "tonemapping_luts",
    "webgl2",
    "x11",
    "async_executor",
    "async-io",
] }
bevy_kira_audio = { version = "0.23.0", features = ["mp3"] }
bevy_skein = "0.2.0"
avian_pickup = { version = "0.2.0-dev" }
bitflags = "2.9.0"
bevy_dither_post_process = "0.4"
bevy_trauma_shake = "0.5.0"

[target.x86_64-unknown-linux-gnu.dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_animation",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_input_focus",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "hdr",
    "ktx2",
    "multi_threaded",
    "png",
    "smaa_luts",
    "std",
    "sysinfo_plugin",
    "tonemapping_luts",
    "webgl2",
    "wayland",
    "async_executor",
    "async-io",
    "dynamic_linking",
] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
codegen-units = 1
strip = true

[lints.clippy]
type-complexity = "allow"
too-many-arguments = "allow"
double-parens = "allow"

[lints.rust]
unused_parens = "allow"

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# this is what `release` should be
[profile.release-dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true


[patch.crates-io]
avian3d = { git = "https://github.com/Jondolf/avian.git", branch = "main" }
bevy-tnua = { git = "https://github.com/janhohenheim/bevy-tnua", branch = "bevy-0.16" }
bevy-tnua-avian3d = { git = "https://github.com/janhohenheim/bevy-tnua", branch = "bevy-0.16" }
avian_pickup = { git = "https://github.com/janhohenheim/avian_pickup", branch = "main" }
bevy_dither_post_process = { git = "https://github.com/Jaghov/bevy_dither_post_process", branch = "main" }
